--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <script
+            type="module"
+            src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"
+        ></script>
+        <script
+            nomodule=""
+            src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"
+        ></script>
         <link
             href="//db.onlinewebfonts.com/c/0a0fd5faa7a8d8d24e8a0b49c4389a62?family=Ionicons"
             rel="stylesheet"
@@ -16,10 +24,11 @@
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/style.css" />
 
-        <title>React App 1</title>
+        <title>Recipe with React</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+        <!-- <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script> -->
     </body>
 </html>
